fix: fix responsive spacing

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -166,6 +166,10 @@ a {
     padding: 4rem 0;
 }
 
+.pb-0 {
+    padding-bottom: 0;
+}
+
 .section-title {
     font-size: var(--font-size-xl)
 }
@@ -184,7 +188,6 @@ a {
 
 .grid {
     display: grid;
-    gap: calc(var(--gutter) * 2);
 }
 
 .grid-2-cols {
@@ -225,7 +228,7 @@ a {
     border-color: var(--color-primary);
     box-shadow: 0px 2px 10px #00000033;
     border-radius: 30px;
-    padding: 20px 60px;
+    padding: var(--font-size-sm) 60px;
     font-family: var(--font-family-secondary);
     font-weight: var(--font-weight-normal);
     text-transform: uppercase;
@@ -280,6 +283,15 @@ a {
     color: var(--color-dark);
 }
 
+.content-cta-gap, .copyright-content-gap {
+    padding-bottom: 2rem;
+    margin-bottom: 0;
+}
+
+.faq-btn {
+    font-size: 10px;
+}
+
 /* Blockquote style */
 blockquote {
     background-color: var(--color-light-ui);
@@ -308,7 +320,10 @@ blockquote footer {
 
 @media (max-width: 768px) {
     .section {
-        padding: 3rem 0;
+        padding-top: 2rem;
+        padding-left: 0;
+        padding-right: 0;
+        padding-bottom: 0;
     }
 
     /* Stack all grid layouts on smaller screens */
@@ -317,6 +332,7 @@ blockquote footer {
     .grid-4-cols {
         grid-template-columns: 1fr;
         text-align: center;
+        gap: var(--gutter);
     }
 }
 
@@ -358,5 +374,17 @@ blockquote footer {
 
     .copyright-content {
         width: 368px;
+    }
+
+    .grid {
+        gap: calc(var(--gutter) * 2);
+    }
+
+    .faq-btn {
+        font-size: var(--font-size-sm);
+    }
+
+    .copyright-content-gap {
+        padding-bottom: 60px;
     }
 }
